# proyect-final

./: .env.example  Dockerfile  README.md  docker-compose.yml  hello.py  image_downloader.py  pyproject.toml
model_artifacts/: best.pt
src/: main.py
src/agents/: routine_crew.py
src/agents/config/: agents.yaml  tasks.yaml
src/api/: routes.py
src/api/enpoints/: user_controller.py
src/core/: init_app.py  settings.py
src/ia_models/: contour_feature_extractor.py  orchestrator.py  person_detector.py  yolo_body_classifier.py
src/interactors/: routine_interactor.py
src/schemas/: user.py
src/services/: body_type_service.py  routine_service.py
src/utils/: image_filter.py  image_resizer.py  logger.py  pdf_search_tool.py
